--- a/hunt.html
+++ b/hunt.html
@@ -69,7 +69,7 @@
         
 
         <div class="section-title">
-          <h2>Data-Driven Exploration of Parameterisation Schemes within Models of the Tropospheric Mid-Latitudes </h2>
+          <h2>Pembroke College Graduate Parlour Scavenger Hunt - Michaelmas 2022</h2>
         </div>
 
         <p align="justify" style="font-size:18px">Return to this page at 14.00 on Saturday 8th October to see the first clue!
